2006-01-16  Wolfgang Baer  <WBaer@gmx.de>

	* javax/print/attribute/standard/MediaSize.java: 
	(static_initializer): Added comment.
	(MediaSize): Added javadoc to mention cache registration.
	(MediaSize): Likewise.
	(MediaSize): Likewise.
	(MediaSize): Likewise.

2006-01-16  Raif S. Naffah  <raif@swiftdsl.com.au>

	PR classpath/25202
	* gnu/javax/security/auth/login/ConfigFileTokenizer.java: New class.
	* gnu/javax/security/auth/login/ConfigFileParser.java: New class.
	* gnu/javax/security/auth/login/GnuConfiguration.java: New class.
	* javax/security/auth/login/AppConfigurationEntry.java: Updated
	  copyright year.
	  (toString): Added method implementation.
	  (LoginModuleControlFlag.toString): Removed class name from result.
	* javax/security/auth/login/Configuration.java: Updated copyright year.
	  (getConfig(): replaced calls to NullConfiguration with
	  GnuConfiguration.

2006-01-15  Audrius Meskauskas  <AudriusA@Bioinformatics.org>

	* javax/swing/table/DefaultTableCellRenderer.java 
	(getTableCellRendererComponent): Render null as the empty cell.

2006-01-14  Anthony Green  <green@redhat.com>

        * java/net/ServerSocket.java (accept): Remove bogus
        security check.
	(implAccept): Add FIXME comment.

2006-01-14  Wolfgang Baer  <WBaer@gmx.de>

	Fixes bug #25387
	* javax/print/Doc.java: Added and enhanced documentation.
	* javax/print/SimpleDoc.java: New file.	

2006-01-14  Wolfgang Baer  <WBaer@gmx.de>

	* javax/print/attribute/standard/MediaSize.java: 
	(Other.TABLOID): New MediaSize added in 1.5

2006-01-14  Chris Burdess  <dog@gnu.org>

	* gnu/xml/stream/SAXParser.java: Ensure that parser is reset
	  correctly when I/O and runtime exceptions occur during parsing.

2006-01-13  Roman Kennke  <kennke@aicas.com>

	* gnu/java/awt/peer/swing/SwingButtonPeer.java,
	* gnu/java/awt/peer/swing/SwingCanvasPeer.java,
	* gnu/java/awt/peer/swing/SwingComponent.java,
	* gnu/java/awt/peer/swing/SwingComponentPeer.java,