@@ -1,3 +1,7 @@
+2006-01-16  David Gilbert  <david.gilbert@object-refinery.com>
+
+	* javax/swing/text/SimpleAttributeSet.java: Updated API docs all over.
+
 2006-01-16  Wolfgang Baer  <WBaer@gmx.de>
 
 	* javax/print/attribute/standard/MediaSize.java: 
